xor_39391466_stderr.txt
  File "nn_1.py", line 181
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
